fixed invisible text on dark tiles

--- a/src/Style/main.sass
+++ b/src/Style/main.sass
@@ -57,6 +57,7 @@ main
         font-family: 'Chango', cursive
 
     &:nth-child(odd)
+        color: palette.$secondary-color
         background: paper.solid-color($dark-paper-texture, #1c2125)
         border-bottom: 0.1rem solid #52606c
         box-shadow: 0rem 0.2rem 0rem 0rem #39434b, 0.1rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5)
